<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#11CEC4"
    tools:context=".LoginActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf,UselessParent">

        <TextView
            android:id="@+id/topText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_toStartOf="@+id/bkGroupImage"
            android:layout_alignParentStart="true"
            android:textSize="40sp"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/bkGroupImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/group_bk_image"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            android:layout_below="@+id/topText"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/baseline_error_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColorHint="@color/hintColor"
                        android:textColor="@color/black"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:backgroundTint="@color/buttonColor"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_register_now"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:textColor="@color/buttonColor"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>
</LinearLayout>